--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 
 spring:
   datasource:
-    url: "jdbc:mysql://localhost/banking"
+    url: "jdbc:mysql://roundhouse.proxy.rlwy.net:54799/railway"
     username: "root"
-    password: "smruti"
+    password: "KDOYiLpFYoRBzctmQaizlZdKLhgFcMJR"
   sql:
     init:
       mode: ALWAYS
